objects/Case__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivary__c</fullName>
        <label>Delivery Time</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_Issue__c</fullName>
        <label>Hardware Issue</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Management__c</fullName>
        <label>Order Management</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Tamilnadu</fullName>
                </value>
                <value>
                    <fullName>Jarkand</fullName>
                </value>
                <value>
                    <fullName>Gujarath</fullName>
                </value>
                <value>
                    <fullName>Madhya Pradesh</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Montana Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
                <value>
                    <fullName>Moskau</fullName>
                </value>
                <value>
                    <fullName>Moskovskaja</fullName>
                </value>
                <value>
                    <fullName>Krasnodar</fullName>
                </value>
                <value>
                    <fullName>Sankt Petersburg</fullName>
                </value>
                <value>
                    <fullName>Sverdlovsk</fullName>
                </value>
                <value>
                    <fullName>Tatarstan</fullName>
                </value>
                <value>
                    <fullName>Rostov</fullName>
                </value>
                <value>
                    <fullName>Samara</fullName>
                </value>
                <value>
                    <fullName>Baskortostan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_Issue__c</fullName>
        <label>Software Issue</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubSegment__c</fullName>
        <label>SubSegment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Warangal</fullName>
                </value>
                <value>
                    <fullName>Chittoor</fullName>
                </value>
                <value>
                    <fullName>Tirupathi</fullName>
                </value>
                <value>
                    <fullName>Nellore</fullName>
                </value>
                <value>
                    <fullName>Cudappa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>